# modorganizer-nxmhandler

./: .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  vcpkg.json
src/: CMakeLists.txt  SConscript  addbinarydialog.cpp  addbinarydialog.h  addbinarydialog.ui  app_icon.rc  handlerstorage.cpp  handlerstorage.h  handlerwindow.cpp  handlerwindow.h  handlerwindow.ui  logger.cpp  logger.h  main.cpp  nxmhandler.pro  nxmhandler.qbs  nxmhandler_en.ts  qt.conf  resources.qrc  sortabletreewidget.cpp  sortabletreewidget.h  version.rc
